# lab_tasks

./: .coverage  ALLINONE.py  README.md  main.py  main_lab10.py  pyproject.toml  run_lab08.py
data/lab08/: students_input.json  students_output.json
data/lab09/: students.csv
data/samples/: people.csv  people.json  text.txt
lab01/: lab_1.py
lab02/: matrix.py
lab_tasks_short/: README.md
lab_tasks_short/src/lab04/: io_txt_csv.py  text_report.py
lab_tasks_short/src/lib/: text.py
src/: README.md
src/data/samples/: cities.csv  people.json
src/lab01/: 01.py  03.py  04.py  05.py  06.py
src/lab02/: 01 .py  02.py  03.py  README.md  arrays.py  matrix.py  tuples.py
src/lab03/: 01 .py  02.py
src/lab04/: io_txt_csv.py  text_report.py
src/lab05/: csv_xlsx.py  json_csv.py
src/lab06/: README.md  cli_text.py  file_converter.py  test_data.py  text.py  text_analysis.py
src/lab08/: models.py  run_lab08.py  serialize.py
src/lab09/: group.py
src/lab10/: README.md  linked_list.py  structures.py
src/labo6/: cli_convert.py  cli_text.py
src/lib/: text.py
tests/: test_json_csv.py  test_text.py
